[metadata]
name = pcc-sim
version = 0.1.0
description = PCEP simulator.
long_description = file: README.md
long_description_content_type = text/markdown
author = Saurabh Shinde
author_email = saushind@ciena.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: Cpython

[options]
packages = find:
python_requires = >=3.8
install_requires =
    scapy

[options.entry_points]
console_scripts =
    pcc = cli.main:main

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.tox,venv